# iLQR

./: README.md  pyproject.toml
src/: __init__.py  core.py
src/PycubedGncCore/: core.py  rk4.py
tests/: cartpole.py  test_cartpole.py
